tests/expand/should-fail/rite_multi_tier_stub.expanded.stderr
warning: unused import: `archmage::rite`
 --> tests/expand/should-fail/rite_multi_tier_stub.expanded.rs:1:5
  |
1 | use archmage::rite;
  |     ^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0658]: use of unstable library feature `panic_internals`: internal details of the implementation of the `panic!` and related macros
  --> tests/expand/should-fail/rite_multi_tier_stub.expanded.rs:11:9
   |
11 |         ::core::panicking::panic_fmt(
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^

warning: unused variable: `data`
 --> tests/expand/should-fail/rite_multi_tier_stub.expanded.rs:9:22
  |
9 | fn compute_stub_neon(data: &[f32; 4]) -> f32 {
  |                      ^^^^ help: if this is intentional, prefix it with an underscore: `_data`
  |
  = note: `#[warn(unused_variables)]` (part of `#[warn(unused)]`) on by default
